<resources>
    <string name="app_name">烟草职工移动办公</string>
    <string name="prompt_email">用户名/手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名不符合规则</string>
    <string name="error_invalid_password">密码太短了</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="banben">版权归中商宏图科技有限公司所有\n版本号：1.0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person_msg">人员信息</string>
    <string name="person_msg_detail">查询相关人员基本信息</string>
    <string name="base_build">基础设施</string>
    <string name="base_build_detail">查询基础设施相关信息</string>
    <string name="check_work">工作考核</string>
    <string name="check_work_detail">查询查询工作考核相关信息</string>
    <string name="plant">种植情况</string>
    <string name="plant_detail">查询烟农种植相关信息</string>
    <string name="public_msg">公示信息</string>
    <string name="public_msg_detail">查询公示相关信息</string>
    <string name="data_analysis">数据分析</string>
    <string name="data_analysis_detail">查询数据分析信息</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">显示昵称</string>
    <string name="pref_default_display_name">display your name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">系统设置</string>
    <string name="pref_header_notifications">通知</string>
    <string name="pref_title_new_message_notifications">新消息通知</string>
    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>
    <string name="pref_title_vibrate">震动</string>
    <string name="wangjimima">忘记密码？</string>
    <string name="publicSign">公网登录</string>
    <string name="privateSign">专网登录</string>
    <string name="banner">banner</string>
    <string name="redu">热度</string>
    <string name="btn_trance_name">btn</string>
    <string name="title_activity_main_list_detail">MainListDetailActivity</string>
    <string name="annual">年&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度</string>
    <string name="town">乡&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;镇</string>
    <string name="name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="villageCommittee">村&#160;&#160;委&#160;&#160;会</string>
    <string name="villageGroup">村&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;组</string>
    <string name="plantArea">种植面积(亩)</string>
    <string name="exportCount">出口备货(Kg)</string>
    <string name="mandatory_purchase">指令性收购(Kg)</string>
    <string name="yantianbianhao">烟田编号</string>
    <string name="hetongyuqian">合同预签</string>
    <string name="variety">品&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;种</string>
    <string name="sigArea">合同面积</string>
    <string name="sigStrains">合同株数</string>
    <string name="totalStrains">株数合计</string>
    <string name="totalArea">面积合计</string>
    <string name="dianzhuriqi">点株日期</string>
    <string name="heshiqingkuang">核实情况</string>
    <string name="dikuaimingcheng">地块名称</string>
    <string name="dikuaimianji">地块面积</string>
    <string name="zhushu">株数</string>
    <string name="add">添加</string>
    <string name="identity">身份证号</string>
    <string name="familyAddress">家庭住址</string>
    <string name="zhongzhizhushu">种植株数(株)</string>
    <string name="jiafang">甲&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;方</string>
    <string name="yifang">乙&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;方</string>
    <string name="hukoucehao">户口册号</string>
    <string name="lianxidianhua">联系电话</string>
    <string name="kaihuyinghang">开户银行</string>
    <string name="yinhangzhanghao">银行账号</string>
    <string name="lishuyanzhan">隶属烟站</string>
    <string name="formal_item1">\t\t为确保烟叶生产平稳发展，保障优质烟叶有效供给，依据《中华人民共和国烟草专卖法》及《中华人民共和国烟草专卖法实施条例》、《中华人民共和国合同法》及国家烟草专卖局《烟叶种植收购合同管理暂行办法》的有关规定，甲乙双方本着和平、互利、自愿的原则。协商签订如下合同：</string>
    <string name="formal_item3">\n\t\t1.具备种植优质烟叶的土地、劳力、资金及烟叶调制设备等条件，积极发展适度规模种植。\n\t\t2.服从区域烟田规划安排，按照以烟为主的要求，合理进行轮作。\n\t\t3.将甲方提供的生产投入补贴全部用于烟叶生产，不挪作他用。使用甲方统一组织培育的烟苗进行栽种，不自留、自繁衍烟草种子，不私自育苗，不使用未在烟草上登记的农药及降低烟叶品质的化肥等化学品。\n\t\t4.按照甲方提出的技术标准、技术方案和田间处理不适用烟叶的要求进行各环节的烟叶生产。\n\t\t5.不使用不满16周岁的未成年人（童工）。</string>
    <string name="formal_item2">\n\t\t1.根据市场需求和优质烟叶生产要求,知道乙方选择适宜地块，合理进行轮作，发展适度规模种植。\n\t\t2.向乙方有偿（或无偿）提供烟叶生产扶持。扶持项目、补贴标准、兑现时间、兑现方式由甲方按照上级烟草公司有关规定并结合生产实际制定。\n\t\t3.向乙方提供技术指导、技术培训和技术咨询服务。\n\t\t4.指导乙方做好不适用烟叶田间处理工作，经验收合格后，及时兑现优化烟叶结构补贴，验收不合格的不予兑现补贴。\n\t\t5.按照合同约定收购量组织烟叶收购，无计划、无合同、计划外、合同外烟叶不予收购。</string>
    <string name="formal_item4">\n\t\t1.本合同由云南省烟草专卖局同意监制，州（市）烟草公司烟叶工作站加盖烟叶种植收购合同专用章后生效。\n\t\t2.本合同为一本通，凭此合同种植、交售烟叶、领取烟叶交售款和供应商烟用物资，查询相关信息。\n\t\t3.本合同不准伪造、涂改、损坏、撕页，不准租借、转让或买卖，违者一律视为无效。\n\t\t4.种烟农户应妥善保管本合同，如有遗失，应持有效证明向甲方挂失，甲方经审查确认后，方可补发新合同，同时注销原合同。\n\t\t5.本合同所指为烤烟型烟叶。\n\t\t6.年度烟叶收购价格由烟叶工作站张榜公布。\n\t\t7.本合同信息不得擅自更改，若有变动，须书面确认并连同档案同时修改。\n\t\t注：烟叶生长期间自然灾害保险待省局（公司）明确政策后再增加到合同相应条款中。</string>
    <string name="formal_item5">\n\t\t1.甲方未履行本合同规定的相关条款，乙方有权举报。（举报电话：0871–63137842）\n\t\t2.甲方不履行合同约定条款造成乙方经济损失的，视情节轻重返还甲方生产投入补贴。\n\t\t3.乙方由于人为因素不履行合同约定条款造成甲方经济损失的，视情节轻重返还甲方生产投入补贴。\n\t\t4.乙方未按甲方要求在田间处理不适用烟叶、未完成合同约定收购量及上等烟数量的，甲方按规定不兑现不采烤烟叶补贴。\n\t\t5.乙方在合同约定交售时间内未完成合同签订收购量，甲方可根据实际合同完成情况进行调整或解除。\n\t\t6.乙方无正当理由，连续两年违约弃种，甲方将不再与之签订合同。</string>
    <string name="formal_item6">\n\t\t1.本合同不得随意变更和解除。若遇自然灾害等不可抗力致使不能履行合同的，经双方协商同意，可以解除本合同。\n\t\t2.本合同自双方签订之日起生效。未尽事宜经甲乙双方协商，可在其他约定事项中注明。</string>
    <string name="formal_item7">1\t下等烟叶收购重点保障出口备货计划,收购等级为</string>
    <string name="yaoyuezhuyaorenwu">要约主要任务</string>
    <string name="zhongyandikuai">种烟地块</string>
    <string name="mushu">亩数</string>
    <string name="zhongzhipinzhong">种植品种</string>
    <string name="qianding">签订</string>
    <string name="diyicitiaozheng">第一次调整</string>
    <string name="diercitiaozheng">第二次调整</string>
    <string name="heji">合&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;计</string>
    <string name="jiafangquanli">甲方权利和义务</string>
    <string name="yifangquanli">乙方权利和义务</string>
    <string name="yannongxuzhi">烟农须知</string>
    <string name="weiyuezeren">违约责任</string>
    <string name="fuze">附则</string>
    <string name="buchongtiaokuan">补充条款</string>
    <string name="shengchanfuchibutie">生产扶持补贴</string>
    <string name="fuchibutie">扶持补贴</string>
    <string name="fuchixiangmu">扶持项目</string>
    <string name="butiebiaozhun">补贴标准</string>
    <string name="duixianfangshi">兑现方式</string>
    <string name="shougoushiduan">收购时段</string>
    <string name="shougoudidian">收购地点</string>
    <string name="kg">kg</string>
</resources>